// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it allows for customization 1`] = `
Object {
  "adapter": "adapter-default",
  "beforeScreenshot": [Function],
  "delay": 10000,
  "folder": "screenshots",
  "height": 450,
  "isMobile": true,
  "url": "https://google.com",
  "width": 800,
}
`;

exports[`it returns defaults 1`] = `
Object {
  "adapter": "adapter-default",
  "beforeScreenshot": [Function],
  "delay": 0,
  "folder": "screenshots",
  "height": 450,
  "isMobile": true,
  "url": "https://google.com",
  "width": 800,
}
`;
